--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "express-query-parser": "^1.2.0",
     "mongoose": "^5.11.17",
     "vue": "^3.0.5"
   },
