--- a/cvrsedash/package.json
+++ b/cvrsedash/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^4.1.2",
+    "autoprefixer": "^9.8.6",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "postcss": "^7.0.35",
+    "prettier": "^2.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
