--- a/cvrseclient/package.json
+++ b/cvrseclient/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "postcss": "^7",
     "ramda": "^0.27.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
