--- a/cvrsedash/package.json
+++ b/cvrsedash/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cvrsedash",
+  "name": "mevn-dashboard",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,23 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/auth-next": "^5.0.0-1608568767.2fe2217",
+    "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/dotenv": "^1.4.1",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
+    "core-js": "^3.6.5",
+    "nuxt": "^2.14.6",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
+    "vee-validate": "^3.4.5",
     "vue-form-generator": "^2.3.4",
     "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.1.2",
-    "autoprefixer": "^9.8.6",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "postcss": "^7.0.35",
-    "prettier": "^2.2.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2"
   }
 }
