--- a/cvrseclient/package.json
+++ b/cvrseclient/package.json
@@ -18,6 +18,7 @@
     "ramda": "^0.27.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
+    "vue-form-generator": "^2.3.4",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
